[package]
authors = ["Avery Crespi <averycrespi@gmail.com>"]
edition = "2018"
name = "orcbrew"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
edn-rs = {version = "0.16.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[lib]
name = "orcbrew"
path = "src/lib.rs"
