[package]
authors = ["Avery Crespi <averycrespi@gmail.com>"]
edition = "2018"
name = "rustbrew"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
pest = "2.1"
pest_derive = "2.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
log = "0.4.11"

[lib]
name = "rustbrew"
path = "src/lib.rs"
